--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 target/*
 .idea/*
 *.iml
+
+web-app/WEB-INF/tld/fmt.tld
+
+web-app/WEB-INF/tld/c.tld
+
+plugin.xml
+
+grails-bie-plugin-1.0-SNAPSHOT.zip
+
+grails-bie-plugin-1.0-SNAPSHOT.zip.sha1
