--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ targetCompatibility = 1.8
 repositories {
     mavenLocal()
     maven { url "https://repo.grails.org/grails/core" }
-    maven { url "http://nexus.ala.org.au/content/groups/public/" }
+    maven { url "https://nexus.ala.org.au/content/groups/public/" }
 }
 
 dependencies {
@@ -43,7 +43,7 @@ dependencies {
     profile "org.grails.profiles:web-plugin"
     provided "org.grails:grails-plugin-services"
     provided "org.grails:grails-plugin-domain-class"
-    runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.14.2"
+    compile "com.bertramlabs.plugins:asset-pipeline-grails:2.14.2"
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
@@ -69,6 +69,10 @@ dependencies {
     }
     runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '1.4-SNAPSHOT', changing: true
     compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '0.9-SNAPSHOT', changing: true
+    //runtime group: 'org.grails.plugins', name: 'ala-charts-plugin', version: '1.3', changing: true
+    //compile (group: 'org.grails.plugins', name: 'images-client-plugin', version: '0.8', changing: true) {
+    //    exclude group: 'org.grails.plugins', module: 'ala-auth'
+    //}
 }
 
 bootRun {
