--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+#Fri Sep 01 15:37:58 AEST 2017
 grailsVersion=3.2.11
+grailsWrapperVersion=1.0.0
 gormVersion=6.0.12.RELEASE
 gradleWrapperVersion=3.4.1
