--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ jdk:
 sudo: false
 branches:
   only:
-  - master
+    - master
+    - jdk8
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
