--- a/build.gradle
+++ b/build.gradle
@@ -66,9 +66,7 @@ dependencies {
     compile "org.jsoup:jsoup:1.8.3"
 
     compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.0.0-SNAPSHOT', changing: true
-    compile(group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.0-SNAPSHOT', changing: true) {
-        exclude group: 'javax.servlet', module: 'servlet-api'
-    }
+    compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.0-SNAPSHOT', changing: true
     runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '1.4-SNAPSHOT', changing: true
     compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '0.9-SNAPSHOT', changing: true
     //runtime group: 'org.grails.plugins', name: 'ala-charts-plugin', version: '1.3', changing: true
