--- a/build.gradle
+++ b/build.gradle
@@ -54,11 +54,13 @@ dependencies {
     compile ('org.jasig.cas.client:cas-client-core:3.4.1') {
         exclude group: 'javax.servlet', module: 'servlet-api'
     }
-    compile("au.org.ala:ala-name-matching:2.4.0") {
+    compile("au.org.ala:ala-name-matching:2.4.6") {
         exclude group: 'org.apache.lucene', module: 'lucene-core'
         exclude group: 'org.apache.lucene', module: 'lucene-analyzers-common'
         exclude group: 'org.apache.lucene', module: 'lucene-queryparser'
         exclude group: 'uk.ac.shef.wit', module: 'simmetrics'
+        exclude group: 'org.apache.bval', module: 'org.apache.bval.bundle'
+
     }
     compile "commons-httpclient:commons-httpclient:3.1"
     compile "org.codehaus.jackson:jackson-core-asl:1.8.6"
