--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-version "1.4.2-SNAPSHOT"
+version "1.4.2"
 group "au.org.ala.plugins.grails"
 
 apply plugin:"eclipse"
@@ -54,7 +54,7 @@ dependencies {
     compile ('org.jasig.cas.client:cas-client-core:3.4.1') {
         exclude group: 'javax.servlet', module: 'servlet-api'
     }
-    compile("au.org.ala:ala-name-matching:2.4.6") {
+    compile("au.org.ala:ala-name-matching:2.4.7") {
         exclude group: 'org.apache.lucene', module: 'lucene-core'
         exclude group: 'org.apache.lucene', module: 'lucene-analyzers-common'
         exclude group: 'org.apache.lucene', module: 'lucene-queryparser'
@@ -67,10 +67,10 @@ dependencies {
     compile "org.codehaus.jackson:jackson-mapper-asl:1.8.6"
     compile "org.jsoup:jsoup:1.8.3"
 
-    compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.0.2', changing: true
+    compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.0.2'
     compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.0-SNAPSHOT', changing: true
-    runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0.1-SNAPSHOT', changing: true
-    compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '0.9-SNAPSHOT', changing: true
+    runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0'
+    compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '1.0'
     //runtime group: 'org.grails.plugins', name: 'ala-charts-plugin', version: '1.3', changing: true
     //compile (group: 'org.grails.plugins', name: 'images-client-plugin', version: '0.8', changing: true) {
     //    exclude group: 'org.grails.plugins', module: 'ala-auth'
