--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-version "1.4.2"
+version "1.4.2.1"
 group "au.org.ala.plugins.grails"
 
 apply plugin:"eclipse"
@@ -67,8 +67,8 @@ dependencies {
     compile "org.codehaus.jackson:jackson-mapper-asl:1.8.6"
     compile "org.jsoup:jsoup:1.8.3"
 
-    compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.0.2'
-    compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.0-SNAPSHOT', changing: true
+    compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.0.3'
+    compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.0'
     runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0'
     compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '1.0'
     //runtime group: 'org.grails.plugins', name: 'ala-charts-plugin', version: '1.3', changing: true
