--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     compile "org.jsoup:jsoup:1.8.3"
 
     compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.0.2'
-    compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.2-SNAPSHOT', changing: true
+    compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.0', changing: true
     runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0'
     compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '1.0'
     //runtime group: 'org.grails.plugins', name: 'ala-charts-plugin', version: '1.3', changing: true
