Reverting to 1.4.5-SNAPSHOT
Added missing line compared to biocache-hubs plugin.

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-version "1.4.5"
+version "1.4.5-SNAPSHOT"
 group "au.org.ala.plugins.grails"
 
 apply plugin:"eclipse"
@@ -131,6 +131,7 @@ publishing {
                     it.replaceNode {}
                 }
             }
+            from components.java
         }
     }
 }
