--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-version "1.4.7-SNAPSHOT"
+version "1.4.7"
 group "au.org.ala.plugins.grails"
 
 apply plugin:"eclipse"
@@ -117,23 +117,4 @@ publishing {
             }
         }
     }
-    // publications {
-    //     mavenJava(MavenPublication) {
-    //         pom.withXml {
-    //             def pomNode = asNode()
-    //             pomNode.dependencyManagement.replaceNode {}
-    //
-    //             // simply remove dependencies without a version
-    //             // version-less dependencies are handled with dependencyManagement
-    //             // see https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/8 for more complete solutions
-    //             pomNode.dependencies.dependency.findAll {
-    //                 it.version.text().isEmpty()
-    //             }.each {
-    //                 it.replaceNode {}
-    //             }
-    //         }
-    //         from components.java
-    //
-    //     }
-    // }
 }
