--- a/grails-app/conf/plugin.yml
+++ b/grails-app/conf/plugin.yml
@@ -14,6 +14,9 @@ grails:
             # Whether to translate GORM events into Reactor events
             # Disabled by default for performance reasons
             events: false
+    assets:
+        excludes:
+            - 'vendor/audiojs/*.*'
 info:
     app:
         name: '@info.app.name@'
