IEK support to species pages. Language names appear in header Language names appear in private section Links to language definitions Configrable. This doesn't have to be about IEK specifically, you call pull out sections of common names for this treatment.

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -160,6 +160,15 @@ admin_role: ROLE_ADMIN
 allowedImageEditingRoles: ROLE_ADMIN
 additionalMapFilter:
 synonymsTypes: synonym
+vernacularName:
+  # A category of vernacular names pulled out from the standard list and given special display treatment
+  pull:
+    categories:
+    active: false
+    label: Special Common Names
+    labelDetail: Common names with a special status
+    showHeader: false
+    showLanguage: false
 external:
   eol:
     search:
