--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-version "1.4.17-SNAPSHOT"
+version "1.4.17"
 group "au.org.ala.plugins.grails"
 
 apply plugin:"eclipse"
@@ -71,7 +71,7 @@ dependencies {
 
     compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.0.6'
     compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.0', changing: true
-    compile group: 'au.org.ala.plugins.grails', name: 'ala-citation-plugin', version: '1.0-SNAPSHOT', changing: true
+    compile group: 'au.org.ala.plugins.grails', name: 'ala-citation-plugin', version: '1.0', changing: true
     runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0.1'
     compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '1.0'
     //runtime group: 'org.grails.plugins', name: 'ala-charts-plugin', version: '1.3', changing: true
