Remove hard-coded message in search webpage Make record a species URL more configurable.

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -131,7 +131,7 @@ speciesList:
 alerts:
   baseUrl: http://alerts.ala.org.au/ws/
 sightings:
-  guidUrl: http://sightings.ala.org.au/
+  url: https://www.ala.org.au/home/record-a-sighting/
 eol:
   lang: en
 defaultDecimalLatitude: -25.61
