--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.2', changing: true
     compile group: 'au.org.ala.plugins.grails', name: 'ala-citation-plugin', version: '1.0'
     runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0.1'
-    compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '1.2-SNAPSHOT'
+    compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '1.2'
     //runtime group: 'org.grails.plugins', name: 'ala-charts-plugin', version: '1.3', changing: true
     //compile (group: 'org.grails.plugins', name: 'images-client-plugin', version: '0.8', changing: true) {
     //    exclude group: 'org.grails.plugins', module: 'ala-auth'
