--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-version "1.4.27"
+version "1.4.28-SNAPSHOT"
 
 group "au.org.ala.plugins.grails"
 
@@ -70,7 +70,7 @@ dependencies {
     compile "org.codehaus.jackson:jackson-mapper-asl:1.8.6"
     compile "org.jsoup:jsoup:1.8.3"
 
-    compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.0.6'
+    compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.2.3'
     compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.2', changing: true
     compile group: 'au.org.ala.plugins.grails', name: 'ala-citation-plugin', version: '1.0'
     runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0.1'
