--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -183,10 +183,7 @@ external:
     page:
       # {0} = page id
       service: https://eol.org/api/pages/1.0/{0,number,#0}.json?language={1}&images_per_page=0&videos_per_page=0&sounds_per_page=0&maps_per_page=0&texts_per_page=30&subjects=overview&licenses=all&details=true&references=true&vetted=0&cache_ttl=
-  blacklist:
-    source: file:./src/test/resources/test-source-blacklist.json
-    name: file:./src/test/resources/test-name-blacklist.json
-    title: file:./src/test/resources/test-title-blacklist.json
+  blacklist: file:./src/test/resources/test-blacklist.json
 literature:
   bhl:
     url: https://biodiversitylibrary.org
