--- a/build.gradle
+++ b/build.gradle
@@ -71,14 +71,12 @@ dependencies {
     compile "org.jsoup:jsoup:1.8.3"
 
     compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.0.6'
-    compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.2', changing: true
+    compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.3', changing: true
     compile group: 'au.org.ala.plugins.grails', name: 'ala-citation-plugin', version: '1.0'
     runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0.1'
     compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '1.2'
-    //runtime group: 'org.grails.plugins', name: 'ala-charts-plugin', version: '1.3', changing: true
-    //compile (group: 'org.grails.plugins', name: 'images-client-plugin', version: '0.8', changing: true) {
-    //    exclude group: 'org.grails.plugins', module: 'ala-auth'
-    //}
+    runtime group: 'xml-apis', name: 'xml-apis', version: '1.4.01'
+    runtime "org.hibernate:hibernate-validator:5.4.2.Final"
 }
 
 bootRun {
