Fix for https://github.com/AtlasOfLivingAustralia/bie-plugin/issues/250 Search across all images in a record, rather than just the first image. Include https: in default service URLs Include default imageServiceBaseUrl and match case across plugins

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -115,25 +115,25 @@ projectNameShort: ALA
 projectName: Atlas of Living Australia
 languageCodesUrl: /languages.json
 biocache:
-  baseURL: http://biocache.ala.org.au
+  baseURL: https://biocache.ala.org.au
 biocacheService:
-  baseURL: http://biocache.ala.org.au/ws
+  baseURL: https://biocache-ws.ala.org.au/ws
   queryContext:
 spatial:
-  baseURL: http://spatial.ala.org.au
+  baseURL: https://spatial.ala.org.au
 layersService:
-  baseURL: http://spatial.ala.org.au/ws
+  baseURL: https://spatial.ala.org.au/ws
 ala:
-  baseURL: http://www.ala.org.au
+  baseURL: https://www.ala.org.au
 collectory:
-  baseURL: http://collections.ala.org.au
+  baseURL: https://collections.ala.org.au
   threatenedSpeciesCodesUrl: http://collections.ala.org.au/public/showDataResource
 regions:
-  baseURL: http://regions.ala.org.au
+  baseURL: https://regions.ala.org.au
 speciesList:
-  baseURL: http://lists.ala.org.au
+  baseURL: https://lists.ala.org.au
 alerts:
-  baseUrl: http://alerts.ala.org.au/ws/
+  baseUrl: https://alerts.ala.org.au/ws/
 sightings:
   url: https://www.ala.org.au/home/record-a-sighting/
 eol:
@@ -141,8 +141,9 @@ eol:
 defaultDecimalLatitude: -25.61
 defaultDecimalLongitude: 134.35
 defaultZoomLevel: 4
+imageServiceBaseUrl: https://images.ala.org.au
 image:
-  thumbnailUrl: http://images.ala.org.au/image/proxyImageThumbnail?imageId=
+  thumbnailUrl: https://images.ala.org.au/image/proxyImageThumbnail?imageId=
 map:
   default:
     id:
