--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     compile group: 'org.grails.plugins', name: 'ala-bootstrap3', version: '3.2.3'
     compile group: 'org.grails.plugins', name: 'ala-auth', version:'3.1.3'
     compile group: 'au.org.ala.plugins.grails', name: 'ala-citation-plugin', version: '1.0'
-    runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0.1'
+    runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0.2-SNAPSHOT'
     compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '1.2'
 }
 
