--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     compile group: 'au.org.ala.plugins.grails', name: 'ala-citation-plugin', version: '1.0'
     runtime group: 'au.org.ala.plugins.grails', name: 'ala-charts-plugin', version: '2.0.2-SNAPSHOT'
     compile group: 'au.org.ala.plugins.grails', name: 'images-client-plugin', version: '1.2'
+    compile "au.org.ala:data-quality-filter-service-client:1.0.0"
 }
 
 bootRun {
